--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/BackOffice.Desk.UI.Common.csproj
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/BackOffice.Desk.UI.Common.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ViewModel\Item\ClientItemViewModel.cs" />
     <Compile Include="ViewModel\RootViewModel.cs" />
     <Compile Include="ViewModel\Sections\ClientsViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
