--- a/BackOffice.Desk/BackOffice.Desk.UI/BackOffice.Desk.UI.csproj
+++ b/BackOffice.Desk/BackOffice.Desk.UI/BackOffice.Desk.UI.csproj
@@ -115,5 +115,15 @@
       <Name>BackOffice.Desk.UI.Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\user.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\user2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
