--- a/BackOffice.Desk/WPF.Common/WPF.Common.csproj
+++ b/BackOffice.Desk/WPF.Common/WPF.Common.csproj
@@ -4,19 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D2568CBC-7694-44BD-B76A-DAFF5508A039}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
-    <RootNamespace>BackOffice.Desk.UI</RootNamespace>
-    <AssemblyName>BackOffice.Desk.UI</AssemblyName>
+    <ProjectGuid>{AED65BB0-F436-4664-8353-F36E343AF1EC}</ProjectGuid>
+    <OutputType>library</OutputType>
+    <RootNamespace>WPF.Common</RootNamespace>
+    <AssemblyName>WPF.Common</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -26,7 +24,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -57,24 +54,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
+    <Compile Include="Controls\SearchInput.xaml.cs">
+      <DependentUpon>SearchInput.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -99,35 +81,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\BackOffice.Desk.Theme.Base\BackOffice.Desk.Theme.Base.csproj">
-      <Project>{61892081-bfd8-4cd7-9d96-3bd010444c18}</Project>
-      <Name>BackOffice.Desk.Theme.Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BackOffice.Desk.Theme.Default\BackOffice.Desk.Theme.Default.csproj">
-      <Project>{cd1b37a2-1cca-422f-8906-39a2ce4c60b5}</Project>
-      <Name>BackOffice.Desk.Theme.Default</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\BackOffice.Desk.UI.Common\BackOffice.Desk.UI.Common.csproj">
-      <Project>{5856a3a1-9348-4ba1-9b85-f00b6f3f4e21}</Project>
-      <Name>BackOffice.Desk.UI.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\WPF.Common\WPF.Common.csproj">
-      <Project>{aed65bb0-f436-4664-8353-f36e343af1ec}</Project>
-      <Name>WPF.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\user.jpg">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Images\user2.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
+    <Page Include="Controls\SearchInput.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
