--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/BackOffice.Desk.UI.Common.csproj
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/BackOffice.Desk.UI.Common.csproj
@@ -34,6 +34,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -63,11 +65,13 @@
     </Compile>
     <Compile Include="ViewModel\Item\ClientItemViewModel.cs" />
     <Compile Include="ViewModel\Item\OrderItemViewModel.cs" />
+    <Compile Include="ViewModel\Item\ProductItemViewModel.cs" />
     <Compile Include="ViewModel\RootViewModel.cs" />
     <Compile Include="ViewModel\ViewModels\ClientsViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="ViewModel\ViewModels\HomeViewModel.cs" />
     <Compile Include="ViewModel\ViewModels\OrdersViewModel.cs" />
+    <Compile Include="ViewModel\ViewModels\ProductsViewModel.cs" />
     <Compile Include="View\ClientsView.xaml.cs">
       <DependentUpon>ClientsView.xaml</DependentUpon>
     </Compile>
@@ -76,6 +80,9 @@
     </Compile>
     <Compile Include="View\OrdersView.xaml.cs">
       <DependentUpon>OrdersView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ProductsView.xaml.cs">
+      <DependentUpon>ProductsView.xaml</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -96,6 +103,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\OrdersView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\ProductsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
