--- a/BackOffice.Desk/BackOffice.Desk.UI.Common/BackOffice.Desk.UI.Common.csproj
+++ b/BackOffice.Desk/BackOffice.Desk.UI.Common/BackOffice.Desk.UI.Common.csproj
@@ -38,6 +38,7 @@
     <Reference Include="MahApps.Metro.IconPacks.Material, Version=4.0.0.0, Culture=neutral, PublicKeyToken=0c0d510f9915137a, processorArchitecture=MSIL">
       <HintPath>..\packages\MahApps.Metro.IconPacks.Material.4.11.0\lib\net47\MahApps.Metro.IconPacks.Material.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
